[featured link] fixed spacing between plain large link title and summary

--- a/themes/health/source/sass/components/health/_featured-link.scss
+++ b/themes/health/source/sass/components/health/_featured-link.scss
@@ -45,7 +45,9 @@
 
     // &__summary {}
 
-    // &__summary--plain-large {}
+    &__summary--plain-large {
+      margin-top: 1rem;
+    }
 
     // &__summary--plain-large-light {}
 
